# opensearch-memory-mcp

./: .gitignore  CLAUDE.md  README.md  config.json.example  docker-compose.yml  pyproject.toml
config/: CLAUDE.md  claude-code-setup.sh  kiro-agent-rules.md  kiro-mcp.json
hooks/: claude-code-hook.sh
src/opensearch_memory_mcp/: __init__.py  __main__.py  config.py  hook.py  opensearch_manager.py  server.py
tests/: test_integration.py
