[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensearch-memory-mcp"
version = "0.1.0"
description = "Persistent, semantically searchable memory for AI agents backed by OpenSearch"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "mcp>=1.6.0",
    "opensearch-py>=2.4.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opensearch_memory_mcp"]
